Bug 433532 - Crash on setting page
Summary: Crash on setting page
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords: drkonqi
: 434390 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-02-24 12:23 UTC by Anton K
Modified: 2021-03-15 23:15 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anton K 2021-02-24 12:23:41 UTC
Application: plasma-systemmonitor (5.21.1)

Qt Version: 5.15.2
Frameworks Version: 5.79.0
Operating System: Linux 5.4.0-66-generic x86_64
Windowing System: X11
Drkonqi Version: 5.21.1
Distribution: KDE neon User Edition 5.21

-- Information about the crash:
- What I was doing when t	he application crashed:
Page editing -> Page settings -> Crash (not always repeated)

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: Системный монитор (plasma-systemmonitor), signal: Segmentation fault

[New LWP 32166]
[New LWP 32167]
[New LWP 32168]
[New LWP 32176]
[New LWP 32177]
[New LWP 32178]
[New LWP 32179]
[New LWP 32180]
[New LWP 32189]
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
0x00007f98d69b5aff in __GI___poll (fds=0x7ffda0039028, nfds=1, timeout=1000) at ../sysdeps/unix/sysv/linux/poll.c:29
[Current thread is 1 (Thread 0x7f98d811d340 (LWP 32165))]

Thread 10 (Thread 0x7f9893fd7700 (LWP 32189)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x559c3132ed84) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x559c3132ed30, cond=0x559c3132ed58) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x559c3132ed58, mutex=0x559c3132ed30) at pthread_cond_wait.c:638
#3  0x00007f98d6d53d1b in QWaitConditionPrivate::wait (deadline=..., this=0x559c3132ed30) at thread/qwaitcondition_unix.cpp:146
#4  QWaitCondition::wait (this=<optimized out>, mutex=0x559c31332ef0, deadline=...) at thread/qwaitcondition_unix.cpp:225
#5  0x00007f98d15e8814 in ?? () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#6  0x00007f98d15e8c89 in ?? () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#7  0x00007f98d6d4dbac in QThreadPrivate::start (arg=0x559c31332e50) at thread/qthread_unix.cpp:329
#8  0x00007f98d66a9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#9  0x00007f98d69c2293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 9 (Thread 0x7f98abfff700 (LWP 32180)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x559c306f0058) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x559c306f0008, cond=0x559c306f0030) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x559c306f0030, mutex=0x559c306f0008) at pthread_cond_wait.c:638
#3  0x00007f98bed5ab5b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#4  0x00007f98bed5a75b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#5  0x00007f98d66a9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f98d69c2293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 8 (Thread 0x7f98b88f5700 (LWP 32179)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x559c306f0058) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x559c306f0008, cond=0x559c306f0030) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x559c306f0030, mutex=0x559c306f0008) at pthread_cond_wait.c:638
#3  0x00007f98bed5ab5b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#4  0x00007f98bed5a75b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#5  0x00007f98d66a9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f98d69c2293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 7 (Thread 0x7f98b90f6700 (LWP 32178)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x559c306f0058) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x559c306f0008, cond=0x559c306f0030) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x559c306f0030, mutex=0x559c306f0008) at pthread_cond_wait.c:638
#3  0x00007f98bed5ab5b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#4  0x00007f98bed5a75b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#5  0x00007f98d66a9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f98d69c2293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 6 (Thread 0x7f98b98f7700 (LWP 32177)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x559c306f0058) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x559c306f0008, cond=0x559c306f0030) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x559c306f0030, mutex=0x559c306f0008) at pthread_cond_wait.c:638
#3  0x00007f98bed5ab5b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#4  0x00007f98bed5a75b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#5  0x00007f98d66a9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f98d69c2293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 5 (Thread 0x7f98c8c2f700 (LWP 32176)):
#0  futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x559c3078febc) at ../sysdeps/nptl/futex-internal.h:183
#1  __pthread_cond_wait_common (abstime=0x0, clockid=0, mutex=0x559c3078fe68, cond=0x559c3078fe90) at pthread_cond_wait.c:508
#2  __pthread_cond_wait (cond=0x559c3078fe90, mutex=0x559c3078fe68) at pthread_cond_wait.c:638
#3  0x00007f98bed5ab5b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#4  0x00007f98bed5a75b in ?? () from /usr/lib/x86_64-linux-gnu/dri/r600_dri.so
#5  0x00007f98d66a9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f98d69c2293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 4 (Thread 0x7f98cb5ef700 (LWP 32168)):
#0  0x00007f98d66b1c8c in __GI___pthread_getspecific (key=<optimized out>) at pthread_getspecific.c:60
#1  0x00007f98d595be84 in g_thread_self () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f98d5931200 in g_main_context_acquire () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f98d5932045 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f98d59322c3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#5  0x00007f98d6f8dfbb in QEventDispatcherGlib::processEvents (this=0x7f98c0000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#6  0x00007f98d6f321ab in QEventLoop::exec (this=this@entry=0x7f98cb5eed40, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#7  0x00007f98d6d4ca12 in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#8  0x00007f98d861efa9 in ?? () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#9  0x00007f98d6d4dbac in QThreadPrivate::start (arg=0x559c30647680) at thread/qthread_unix.cpp:329
#10 0x00007f98d66a9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#11 0x00007f98d69c2293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7f98d08ef700 (LWP 32167)):
#0  0x00007f98d59300e4 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f98d5931adf in g_main_context_check () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f98d5932132 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f98d59322c3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f98d6f8dfbb in QEventDispatcherGlib::processEvents (this=0x7f98c4000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#5  0x00007f98d6f321ab in QEventLoop::exec (this=this@entry=0x7f98d08eed30, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#6  0x00007f98d6d4ca12 in QThread::exec (this=<optimized out>) at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#7  0x00007f98d71f0f4b in ?? () from /lib/x86_64-linux-gnu/libQt5DBus.so.5
#8  0x00007f98d6d4dbac in QThreadPrivate::start (arg=0x7f98d7274d80) at thread/qthread_unix.cpp:329
#9  0x00007f98d66a9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#10 0x00007f98d69c2293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7f98d2b7f700 (LWP 32166)):
#0  0x00007f98d69b5aff in __GI___poll (fds=0x7f98d2b7ec68, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f98d56e3c1a in ?? () from /lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007f98d56e590a in xcb_wait_for_event () from /lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007f98d31afd58 in QXcbEventQueue::run (this=0x559c30497fd0) at qxcbeventqueue.cpp:228
#4  0x00007f98d6d4dbac in QThreadPrivate::start (arg=0x559c30497fd0) at thread/qthread_unix.cpp:329
#5  0x00007f98d66a9609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#6  0x00007f98d69c2293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7f98d811d340 (LWP 32165)):
[KCrash Handler]
#4  0x00007f98d6f61864 in std::__atomic_base<QObjectPrivate::ConnectionData*>::load (__m=std::memory_order_relaxed, this=<error reading variable: Cannot access memory at address 0x7f1100000008>) at /usr/include/c++/9/bits/atomic_base.h:734
#5  std::atomic<QObjectPrivate::ConnectionData*>::load (__m=std::memory_order_relaxed, this=<error reading variable: Cannot access memory at address 0x7f1100000008>) at /usr/include/c++/9/atomic:519
#6  QAtomicOps<QObjectPrivate::ConnectionData*>::loadRelaxed<QObjectPrivate::ConnectionData*> (_q_value=<error reading variable: Cannot access memory at address 0x7f1100000008>) at ../../include/QtCore/../../src/corelib/thread/qatomic_cxx11.h:239
#7  QBasicAtomicPointer<QObjectPrivate::ConnectionData>::loadRelaxed (this=<error reading variable: Cannot access memory at address 0x7f1100000008>) at ../../include/QtCore/../../src/corelib/thread/qbasicatomic.h:248
#8  QMetaObjectPrivate::disconnect (sender=0x7f1100000000, signal_index=10, smeta=0x7f98ca2154a0 <PageDataObject::staticMetaObject>, receiver=0x559c35c10c00, method_index=-1, slot=0x0, disconnectType=QMetaObjectPrivate::DisconnectAll) at kernel/qobject.cpp:3532
#9  0x00007f98d6f62042 in QObject::disconnectImpl (sender=0x7f1100000000, signal=signal@entry=0x7ffda0039990, receiver=receiver@entry=0x559c35c10c00, slot=slot@entry=0x0, senderMetaObject=0x7f98ca2154a0 <PageDataObject::staticMetaObject>) at kernel/qobject.cpp:5204
#10 0x00007f98ca20b4c6 in QObject::disconnect<void (PageDataObject::*)()> (zero=0x0, receiver=0x559c35c10c00, signal=(void (PageDataObject::*)(class PageDataObject * const)) 0x7f98ca1f3a00 <PageDataObject::dirtyChanged()>, sender=<optimized out>) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qobject.h:384
#11 FacesModel::setPageData (this=0x559c35c10c00, pageData=0x559c309348d0) at ./src/page/FacesModel.cpp:86
#12 0x00007f98ca1f568b in FacesModel::qt_metacall (this=0x559c35c10c00, _c=QMetaObject::WriteProperty, _id=0, _a=0x7ffda0039b90) at ./obj-x86_64-linux-gnu/src/page/PagePlugin_autogen/EWIEGA46WW/moc_FacesModel.cpp:167
#13 0x00007f98d854f511 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#14 0x00007f98d856235c in QQmlPropertyPrivate::write(QObject*, QQmlPropertyData const&, QVariant const&, QQmlContextData*, QFlags<QQmlPropertyData::WriteFlag>) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#15 0x00007f98d847f69c in QV4::QObjectWrapper::setProperty(QV4::ExecutionEngine*, QObject*, QQmlPropertyData*, QV4::Value const&) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#16 0x00007f98d84801ce in QV4::QObjectWrapper::setQmlProperty(QV4::ExecutionEngine*, QQmlContextData*, QObject*, QV4::String*, QV4::QObjectWrapper::RevisionMode, QV4::Value const&) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#17 0x00007f98d84536e2 in QV4::QQmlContextWrapper::virtualPut(QV4::Managed*, QV4::PropertyKey, QV4::Value const&, QV4::Value*) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#18 0x00007f98d83fba79 in QV4::ExecutionContext::setProperty(QV4::String*, QV4::Value const&) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#19 0x00007f98d84ac05b in QV4::Runtime::StoreNameSloppy::call(QV4::ExecutionEngine*, int, QV4::Value const&) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#20 0x00007f98d849a938 in ?? () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#21 0x00007f98d84a002f in ?? () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#22 0x00007f98d842d24d in QV4::Function::call(QV4::Value const*, QV4::Value const*, int, QV4::ExecutionContext const*) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#23 0x00007f98d85d2fa7 in QQmlJavaScriptExpression::evaluate(QV4::CallData*, bool*) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#24 0x00007f98d85768ae in QQmlBoundSignalExpression::evaluate(void**) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#25 0x00007f98d8577948 in ?? () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#26 0x00007f98d85b264d in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#27 0x00007f98d8554fbf in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#28 0x00007f98d6f6a245 in doActivate<false> (sender=0x559c3707f9a0, signal_index=5, argv=0x0) at kernel/qobject_p.h:110
#29 0x00007f98d130b138 in ?? () from /lib/x86_64-linux-gnu/libQt5QuickTemplates2.so.5
#30 0x00007f98d13086ab in ?? () from /lib/x86_64-linux-gnu/libQt5QuickTemplates2.so.5
#31 0x00007f98d130bfb5 in ?? () from /lib/x86_64-linux-gnu/libQt5QuickTemplates2.so.5
#32 0x00007f98d130d3d3 in QQuickPopup::qt_metacall(QMetaObject::Call, int, void**) () from /lib/x86_64-linux-gnu/libQt5QuickTemplates2.so.5
#33 0x00007f98d1351b3a in QQuickDialog::qt_metacall(QMetaObject::Call, int, void**) () from /lib/x86_64-linux-gnu/libQt5QuickTemplates2.so.5
#34 0x00007f98d854edc2 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#35 0x00007f98d854ed84 in QQmlVMEMetaObject::metaCall(QObject*, QMetaObject::Call, int, void**) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#36 0x00007f98d85b2be5 in ?? () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#37 0x00007f98d847ba44 in ?? () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#38 0x00007f98d847d6b4 in ?? () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#39 0x00007f98d847e66a in QV4::QObjectMethod::callInternal(QV4::Value const*, QV4::Value const*, int) const () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#40 0x00007f98d849e0f1 in ?? () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#41 0x00007f98d84a002f in ?? () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#42 0x00007f98d842d24d in QV4::Function::call(QV4::Value const*, QV4::Value const*, int, QV4::ExecutionContext const*) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#43 0x00007f98d85d2fa7 in QQmlJavaScriptExpression::evaluate(QV4::CallData*, bool*) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#44 0x00007f98d85768ae in QQmlBoundSignalExpression::evaluate(void**) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#45 0x00007f98d8577948 in ?? () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#46 0x00007f98d85b264d in QQmlNotifier::emitNotify(QQmlNotifierEndpoint*, void**) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#47 0x00007f98d8554fbf in QQmlData::signalEmitted(QAbstractDeclarativeData*, QObject*, int, void**) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#48 0x00007f98d6f6a245 in doActivate<false> (sender=0x559c309cbcc0, signal_index=36, argv=0x0) at kernel/qobject_p.h:110
#49 0x00007f98d16ac2e6 in ?? () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#50 0x00007f98d857000d in QQmlIncubatorPrivate::incubate(QQmlInstantiationInterrupt&) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#51 0x00007f98d8570632 in QQmlIncubationController::incubateFor(int) () from /lib/x86_64-linux-gnu/libQt5Qml.so.5
#52 0x00007f98d1653834 in ?? () from /lib/x86_64-linux-gnu/libQt5Quick.so.5
#53 0x00007f98d6f61155 in QObject::event (this=0x559c306b6f30, e=0x7ffda003e9a0) at kernel/qobject.cpp:1336
#54 0x00007f98d7aaddc3 in QApplicationPrivate::notify_helper (this=this@entry=0x559c304949b0, receiver=receiver@entry=0x559c306b6f30, e=e@entry=0x7ffda003e9a0) at kernel/qapplication.cpp:3632
#55 0x00007f98d7ab6bb8 in QApplication::notify (this=0x7ffda003ecc0, receiver=0x559c306b6f30, e=0x7ffda003e9a0) at kernel/qapplication.cpp:3156
#56 0x00007f98d6f3369a in QCoreApplication::notifyInternal2 (receiver=0x559c306b6f30, event=0x7ffda003e9a0) at ../../include/QtCore/5.15.2/QtCore/private/../../../../../src/corelib/thread/qthread_p.h:325
#57 0x00007f98d6f8d2f0 in QTimerInfoList::activateTimers (this=0x559c305cad00) at kernel/qtimerinfo_unix.cpp:643
#58 0x00007f98d6f8dbdc in timerSourceDispatch (source=<optimized out>) at kernel/qeventdispatcher_glib.cpp:183
#59 0x00007f98d5931f9d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#60 0x00007f98d5932220 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#61 0x00007f98d59322c3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#62 0x00007f98d6f8dfa2 in QEventDispatcherGlib::processEvents (this=0x559c305d94b0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#63 0x00007f98d6f321ab in QEventLoop::exec (this=this@entry=0x7ffda003ebe0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:141
#64 0x00007f98d6f3a354 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#65 0x0000559c2fbdc05d in main (argc=<optimized out>, argv=<optimized out>) at ./src/main.cpp:133
[Inferior 1 (process 32165) detached]

Reported using DrKonqi
Comment 1 Bug Janitor Service 2021-02-26 08:41:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-systemmonitor/-/merge_requests/96
Comment 2 David Redondo 2021-03-01 10:49:46 UTC
Git commit f45c5acd8f95b9c119ab2d341ba84d1c1da92e25 by David Redondo.
Committed on 01/03/2021 at 10:49.
Pushed by davidre into branch 'master'.

Initialize m_pageData

Ran in valgrind to confirm that it no longer crashes.
FIXED-IN:5.21.2

M  +1    -1    src/page/FacesModel.h

https://invent.kde.org/plasma/plasma-systemmonitor/commit/f45c5acd8f95b9c119ab2d341ba84d1c1da92e25
Comment 3 David Redondo 2021-03-01 10:50:14 UTC
Git commit 22202e061fe3299af7c2ea39c2811b261fa67bde by David Redondo.
Committed on 01/03/2021 at 10:50.
Pushed by davidre into branch 'Plasma/5.21'.

Initialize m_pageData

Ran in valgrind to confirm that it no longer crashes.
FIXED-IN:5.21.2


(cherry picked from commit f45c5acd8f95b9c119ab2d341ba84d1c1da92e25)

M  +1    -1    src/page/FacesModel.h

https://invent.kde.org/plasma/plasma-systemmonitor/commit/22202e061fe3299af7c2ea39c2811b261fa67bde
Comment 4 Nate Graham 2021-03-15 23:15:47 UTC
*** Bug 434390 has been marked as a duplicate of this bug. ***