Initialize m_pageData

Ran in valgrind to confirm that it no longer crashes.
BUG:433532
FIXED-IN:5.21.2


(cherry picked from commit f45c5acd8f95b9c119ab2d341ba84d1c1da92e25)